# installer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: bootstrap.sh
src/: api.rs  app.rs  cleanup.rs  cli.rs  event.rs  main.rs  message.rs  model.rs  system.rs  templates.rs  tui.rs  view.rs
src/steps/: complete.rs  config.rs  dependencies.rs  dns.rs  launch.rs  license.rs  mod.rs  preflight.rs  register.rs  security.rs  system_setup.rs  tls.rs
src/subcommands/: mod.rs  status.rs  uninstall.rs  update.rs
