[package]
name = "orda-installer"
version = "1.0.0-beta.2"
edition = "2024"
description = "Orda server installer"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[[bin]]
name = "orda"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "process",
    "fs",
    "io-util",
    "sync",
] }
futures = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
rand = "0.10"
